crates/test-generator/tests/snapshots/tsx/test_generated_this_type.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
class TestClass3 { method3(): this { return this; } }

AST:
(program
  (class_declaration
    name: (type_identifier "TestClass3")
    body: (class_body
      (method_definition
        name: (property_identifier "method3")
        parameters: (formal_parameters)
        return_type: (type_annotation
          (this_type)
        )
        body: (statement_block
          (return_statement
            (this "this")
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:7 to 1:17 }, name: "TestClass3", definition_type: ClassDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
        Definition { position: { 1:20 to 1:27 }, name: "method3", definition_type: MethodDefinition, scope_id: Some(2), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
