crates/test-generator/tests/snapshots/tsx/test_generated_throw_statement.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
throw new Error(error);

AST:
(program
  (throw_statement
    (new_expression
      constructor: (identifier "Error")
      arguments: (arguments
        (identifier "error")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "Error",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 16,
            },
            context: None,
        },
        Usage {
            name: "error",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 22,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
