crates/test-generator/tests/snapshots/tsx/test_generated_variable_declaration.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
var variable1 = source2;

AST:
(program
  (variable_declaration
    (variable_declarator
      name: (identifier "variable1")
      value: (identifier "source2")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:5 to 1:14 }, name: "variable1", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:17 to 1:24 }, name: "source2", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
